Fixed bug of modal not showing up correctly
- typo fixed where modalTitle variable was incorrectly spelled
- small changes in CSS to add color and added favicon

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: black;
-    --background-color: red;
-    --header__background-color: yellow;
+    --primary-color: #3860aa;
+    --secondary-color: #fecb05;
     --header__font-weight: 700;
 }
 
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color: var(--background-color);
+    background-color: var(--primary-color);
     font-family: 'Quicksand', sans-serif;
     color: var(--text-color);
     font-weight: 400;
@@ -19,18 +19,18 @@ body {
 }
 
 h1 {
-    background-color: var(--header__background-color);
     font-weight: var(--header__font-weight);
     margin: 0;
 }
 
 .page-header {
-    margin-top: 60px;
+    margin-top: 77.5px;
 }
 
+
+
 .button {
-    background-color: var(--header__background-color); /* Yellow */
-    border: none;
+    background-color: var(--secondary-color); /* Yellow */
     color: var(--text-color);
     padding: 16px 32px;
     text-align: center;
@@ -41,11 +41,21 @@ h1 {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     cursor: pointer;
-    background-color: white;
-    color: black;
-    border: 2px solid var(--header__background-color);
+    border: 2px solid black;
+    border-radius: 5px;
 }
 
+.pokemon-list {
+    align-content: center;
+}
+
+.btn-primary {
+    align-self: center;
+}
+
+.modal-footer {
+    align-self: center;
+}
 
 
 @media all and (max-width: 500px) {}
